--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/react-slick": "^0.23.13",
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.545.0",
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
