--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "theme/v1.1/footer/docs.", "theme/v1.1/information/docs.tst"],
   "exclude": ["node_modules"]
 }
